# RustActixWebRustlsSvelteKitWebSocketProject

./: README.md  TODO  descript.ion
client/: TODO  package.json  pnpm-lock.yaml  svelte.config.js
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: constants.rs  main.rs
client/src-tauri/src/app/: constants.rs
client/src-tauri/src/server/: mod.rs
client/src-tauri/src/server/handlers/: example.rs
client/src-tauri/src/websocket/: mod.rs  socket_server.rs
client/src/lib/: constants.ts  index.ts  util.ts  ws.ts
client/src/lib/stores/: websocket.ts
client/src/lib/types/: enums.ts  interfaces.ts
client/src/routes/: +page.svelte
server/: Cargo.toml
server/src/: main.rs  server.rs  socket_server.rs
server/static/: ws.html
