[package]
name = "actixweb-rustls-server-example"
version = "1.0.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = {version = "4.4.0",  features = ["rustls-0_21"]}
actix-web-actors = "4.2.0"
env_logger = "0.10.1"
log = "0.4.20"
rustls = "0.21.9"
rustls-pemfile = "1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
